=== Unreleased
 * Add changelog metadata to gemspec - Juri Hahn
 * Attempt to rescue timezone info when given a nonstandard tzid with no VTIMEZONE

=== 2.9.0 2023-08-11
 * Always include the VALUE of Event URLs for improved compatibility - Sean Kelley
 * Improved parse performance - Thomas Cannon
 * Add helper methods for other Calendar method verbs
 * bugfix: Require stringio before use in Parser - vwyu
 
=== 2.8.0 2022-07-10
 * Fix compatibility with ActiveSupport 7 - Pat Allan
 * Set default action of "DISPLAY" on alarms - Rikson
 * Add license information to gemspec - Robert Reiz
 * Support RFC7986 properties - Daniele Frisanco

=== 2.7.1 2021-03-14
 * Recover from bad line-wrapping code that splits in the middle of Unicode code points
 * Add a verbose option to the Parser to quiet some of the chattier log entries

=== 2.7.0 2020-09-12
 * Handle custom component names, with and without X- prefix
 * Fix Component lookup to avoid namespace collisions

=== 2.6.1 2019-12-07
 * Improve performance when generating large ICS files - Alex Balhatchet

=== 2.6.0 2019-11-26
 * Improve performance for calculating timezone offsets - Justin Howard
 * Make it possible to de/serialize with Marshal - Pawel Niewiadomski
 * Avoid FrozenError when running with frozen_string_literal
 * Update minimum Ruby version to supported versions

=== 2.5.3 2019-03-04
 * Improve parsing performance - nehresma
 * Support tzinfo 2.0 - Misty De Meo

=== 2.5.2 2018-12-08
 * Remove usage of the global TimezoneStore instance, in favor of a local variable in the parser
 * Deprecate TimezoneStore class methods

=== 2.5.1 2018-10-30
 * Fix usage without ActiveSupport installed.

=== 2.5.0 2018-09-10
 * Set timezone information from VTIMEZONE components in cases that ActiveSupport can't figure it out (or isn't installed)
 * Prevent rewinding the Parser IO input during parsing - Niels Laukens
 * Update tested/supported ruby versions & documentation updates.

=== 2.4.1 2016-09-03